update bin sh